# Boids

./: .gitignore  LICENSE  README.md
benchmark/: CMakeLists.txt  analyze_results.py  benchmark_main.cpp  benchmark_runner.cpp  benchmark_runner.cpp.backup  benchmark_runner.h  boid_benchmark.h
benchmark/build_benchmark/: CMakeCache.txt  Makefile  benchmark  benchmark_full_results.csv  cmake_install.cmake
documentation/latex/: Boid.aux  Boid.fdb_latexmk  Boid.fls  Boid.pyg  Boid.tex  PC_course_project_template.aux  PC_course_project_template.bbl  PC_course_project_template.blg  PC_course_project_template.fdb_latexmk  PC_course_project_template.fls
documentation/presentation/: antclass.cls  main.aux  main.fdb_latexmk  main.fls  main.tex
documentation/presentation/Chapters/: Experiments.aux  Experiments.tex  Implementation.aux  Implementation.tex  Introduction.aux  Introduction.tex  Results.aux  Results.tex
parallel/: CMakeLists.txt  main.cpp
parallel/src/: boidRenderer.cpp
sequential/: main.cpp
sequential/include/: boid.h
sequential/src/: boidRenderer.cpp
sequential_AoS/: main.cpp
sequential_AoS/include/: boidRenderer.h
sequential_SoA/: main.cpp
sequential_SoA/include/: boid.h  boidRenderer.h
